<resources>
    <string name="app_name">Vmccnc</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_view">change_view</string>
    <string name="action_show_cart">show cart</string>
    <string name="action_add_to_cart">Add ot cart</string>
    <string name="action_edit_mode">Edit mode</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_type">Type:</string>
    <string name="title_manufacturer">Manufacturer:</string>
    <string name="title_country">Country:</string>
    <string name="title_cnc">CNC:</string>
    <string name="title_cnc_full">CNC Full:</string>
    <string name="title_workpiece">Workpiece:</string>
    <string name="title_workpiece_weight">Workpiece Weight:</string>
    <string name="title_size">Size:</string>
    <string name="title_year">Year:</string>
    <string name="title_location">Location:</string>
    <string name="title_max_cutting_diameter">Max Cutting Diameter:</string>
    <string name="title_cutting_diameter">Cutting Diameter:</string>
    <string name="title_bar_capacity">Bar Capacity:</string>
    <string name="title_x_axis">X Axis:</string>
    <string name="title_z_axis">Z Axis:</string>
    <string name="title_spindle_speed">Spindle Speed:</string>
    <string name="title_tools">Tools(All/Live):</string>
    <string name="title_order1">Order1:</string>
    <string name="title_code">Code:</string>
    <string name="title_use_for">Use For:</string>
    <string name="title_producer">Producer:</string>
    <string name="title_din">DIN:</string>
    <string name="title_clamping_range">Clamping Range:</string>
    <string name="title_tool_holder">Tool Holder:</string>
    <string name="title_s">S:</string>
    <string name="title_speed_max">Speed Max:</string>
    <string name="title_a">A:</string>
    <string name="title_b">B:</string>
    <string name="title_m1">M1:</string>
    <string name="title_coolant_supply">Coolant Supply:</string>
    <string name="title_no_internet_connection">No internet connection</string>

    <string name="two_dimensional_size">%sx%s</string>
    <string name="tools_all_live">%s/%s</string>
    <string name="action_delete">Delete selected</string>

</resources>
