<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:scaleType="fitXY"
            tools:src="@drawable/machine1" />

        <Button
            android:id="@+id/button_add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_add_to_cart" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_order1" />

                <TextView
                    android:id="@+id/tv_order1"
                    style="@style/TextStyleNormal"
                    tools:text="Some Type" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_code" />

                <TextView
                    android:id="@+id/tv_code"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_use_for" />

                <TextView
                    android:id="@+id/tv_use_for"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_producer" />

                <TextView
                    android:id="@+id/tv_producer"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_din" />

                <TextView
                    android:id="@+id/tv_din"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_clamping_range" />

                <TextView
                    android:id="@+id/tv_clamping_range"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_tool_holder" />

                <TextView
                    android:id="@+id/tv_tool_holder"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_s" />

                <TextView
                    android:id="@+id/tv_s"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_speed_max" />

                <TextView
                    android:id="@+id/tv_speed_max"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_a" />

                <TextView
                    android:id="@+id/tv_a"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_b" />

                <TextView
                    android:id="@+id/tv_b"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_m1" />

                <TextView
                    android:id="@+id/tv_m1"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_coolant_supply" />

                <TextView
                    android:id="@+id/tv_coolant_supply"
                    style="@style/TextStyleNormal" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>