<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:scaleType="fitXY"
            tools:src="@drawable/machine1" />

        <Button
            android:id="@+id/button_add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_add_to_cart" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_type" />

                <TextView
                    android:id="@+id/tv_type"
                    style="@style/TextStyleNormal"
                    tools:text="Some Type" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_manufacturer" />

                <TextView
                    android:id="@+id/tv_manufacturer"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_country" />

                <TextView
                    android:id="@+id/tv_country"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_cnc" />

                <TextView
                    android:id="@+id/tv_cnc"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_cnc_full" />

                <TextView
                    android:id="@+id/tv_cnc_full"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_workpiece" />

                <TextView
                    android:id="@+id/tv_workpiece"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_workpiece_weight" />

                <TextView
                    android:id="@+id/tv_workpiece_weight"
                    style="@style/TextStyleNormal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    style="@style/TextStyleBold"
                    android:text="@string/title_size" />

                <TextView
                    android:id="@+id/tv_size"
                    style="@style/TextStyleNormal" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</ScrollView>